# rust-chat

./: .gitignore  Cargo.toml  README.md  Trunk.toml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: chat.rs  main.rs
tests/: Cargo.toml
tests/tests/: tests.rs
tests/tests/app/: driver.rs  mod.rs  pages.rs
tests/tests/process/: child.rs  mod.rs  server.rs
tests/tests/webdriver/: client.rs  mgmt.rs  mod.rs  process.rs
