[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "=1.20.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.1", features = ["net"] }
warp = "=0.3.2"
log = "0.4.17"
pretty_env_logger = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

